--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ dotenv = "0.15"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
-tokio = { version = "1.41", features = ["full"] }
+tokio = { version = "^1", features = ["full"] }
 serde_json = "1.0"
