--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "~0.12.2", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0"
-tokio = { version = "^1", features = ["full"] }
+tokio = { version = "1.28.2", features = ["full"] }
 serde_json = "1.0"
